IMB-68: feat. add text to speech
