# server/src/text-to-speech/dto/text-to-speech.dto.ts
@@ -1,7 +1,0 @@
-import { IsString, IsNotEmpty } from 'class-validator';
-
-export class TextToSpeechDto {
-  @IsString()
-  @IsNotEmpty()
-  text: string;
-}
